--- a/ranks.yml
+++ b/ranks.yml
@@ -76,7 +76,7 @@ ranks:
       - null
       - null
   '10':
-    chat_prefix: Lvl 10
+    chat_prefix: '&8[Lvl 10] '
     equipment:
       inventory:
       - ==: org.bukkit.inventory.ItemStack
@@ -155,7 +155,7 @@ ranks:
           - §r§4Devastated
           - §r50% Effective
   '20':
-    chat_prefix: Lvl 20
+    chat_prefix: '&3[Lvl 20] '
     equipment:
       inventory:
       - ==: org.bukkit.inventory.ItemStack
@@ -170,6 +170,7 @@ ranks:
           - §rGet to slashing.
       - ==: org.bukkit.inventory.ItemStack
         type: POTION
+        amount: 2
       - ==: org.bukkit.inventory.ItemStack
         type: PAPER
         amount: 2
@@ -216,8 +217,7 @@ ranks:
       - null
       - null
       - null
-      - ==: org.bukkit.inventory.ItemStack
-        type: POTION
+      - null
       - null
       - null
       - null
@@ -235,7 +235,7 @@ ranks:
           - §r§4Devastated
           - §r50% Effective
   '30':
-    chat_prefix: Lvl 30
+    chat_prefix: '&b[Lvl 30]'
     equipment:
       helmet:
         ==: org.bukkit.inventory.ItemStack
@@ -259,6 +259,7 @@ ranks:
           - §rGet to slashing.
       - ==: org.bukkit.inventory.ItemStack
         type: POTION
+        amount: 2
       - ==: org.bukkit.inventory.ItemStack
         type: PAPER
         amount: 2
@@ -305,8 +306,7 @@ ranks:
       - null
       - null
       - null
-      - ==: org.bukkit.inventory.ItemStack
-        type: POTION
+      - null
       - null
       - null
       - null
@@ -324,7 +324,7 @@ ranks:
           - §r§4Devastated
           - §r50% Effective
   '40':
-    chat_prefix: Lvl 40
+    chat_prefix: '&9[Lvl 40] '
     equipment:
       inventory:
       - ==: org.bukkit.inventory.ItemStack
@@ -337,6 +337,7 @@ ranks:
           - §r70% Effective
       - ==: org.bukkit.inventory.ItemStack
         type: POTION
+        amount: 2
       - ==: org.bukkit.inventory.ItemStack
         type: PAPER
         amount: 3
@@ -383,8 +384,7 @@ ranks:
       - null
       - null
       - null
-      - ==: org.bukkit.inventory.ItemStack
-        type: POTION
+      - null
       - null
       - null
       - null
@@ -411,7 +411,7 @@ ranks:
           - §r§4Devastated
           - §r50% Effective
   '50':
-    chat_prefix: Lvl 50
+    chat_prefix: '&1[Lvl 50] '
     equipment:
       leggings:
         ==: org.bukkit.inventory.ItemStack
@@ -451,6 +451,7 @@ ranks:
           - §r70% Effective
       - ==: org.bukkit.inventory.ItemStack
         type: POTION
+        amount: 2
       - ==: org.bukkit.inventory.ItemStack
         type: PAPER
         amount: 3
@@ -497,8 +498,7 @@ ranks:
       - null
       - null
       - null
-      - ==: org.bukkit.inventory.ItemStack
-        type: POTION
+      - null
       - null
       - null
       - null
@@ -507,7 +507,7 @@ ranks:
       - null
       - null
   '60':
-    chat_prefix: Lvl 60
+    chat_prefix: '&e[Lvl 60] '
     equipment:
       chestplate:
         ==: org.bukkit.inventory.ItemStack
@@ -538,6 +538,7 @@ ranks:
           - §r70% Effective
       - ==: org.bukkit.inventory.ItemStack
         type: POTION
+        amount: 2
       - ==: org.bukkit.inventory.ItemStack
         type: PAPER
         amount: 3
@@ -584,8 +585,7 @@ ranks:
       - null
       - null
       - null
-      - ==: org.bukkit.inventory.ItemStack
-        type: POTION
+      - null
       - null
       - null
       - null
@@ -612,7 +612,7 @@ ranks:
           - §r§4Devastated
           - §r50% Effective
   '70':
-    chat_prefix: Lvl 70
+    chat_prefix: '&6[Lvl 70] '
     equipment:
       boots:
         ==: org.bukkit.inventory.ItemStack
@@ -661,6 +661,7 @@ ranks:
           - §r70% Effective
       - ==: org.bukkit.inventory.ItemStack
         type: POTION
+        amount: 2
       - ==: org.bukkit.inventory.ItemStack
         type: PAPER
         amount: 3
@@ -707,8 +708,7 @@ ranks:
       - null
       - null
       - null
-      - ==: org.bukkit.inventory.ItemStack
-        type: POTION
+      - null
       - null
       - null
       - null
@@ -717,7 +717,7 @@ ranks:
       - null
       - null
   '80':
-    chat_prefix: Lvl 80
+    chat_prefix: '&d[Lvl 80] '
     equipment:
       boots:
         ==: org.bukkit.inventory.ItemStack
@@ -766,6 +766,7 @@ ranks:
           - §r70% Effective
       - ==: org.bukkit.inventory.ItemStack
         type: POTION
+        amount: 2
       - ==: org.bukkit.inventory.ItemStack
         type: PAPER
         amount: 3
@@ -812,8 +813,7 @@ ranks:
       - null
       - null
       - null
-      - ==: org.bukkit.inventory.ItemStack
-        type: POTION
+      - null
       - null
       - null
       - null
@@ -822,7 +822,7 @@ ranks:
       - null
       - null
   '90':
-    chat_prefix: Lvl 90
+    chat_prefix: '&5[Lvl 90] '
     equipment:
       boots:
         ==: org.bukkit.inventory.ItemStack
@@ -871,6 +871,7 @@ ranks:
           - §r70% Effective
       - ==: org.bukkit.inventory.ItemStack
         type: POTION
+        amount: 2
       - ==: org.bukkit.inventory.ItemStack
         type: PAPER
         amount: 3
@@ -917,8 +918,7 @@ ranks:
       - null
       - null
       - null
-      - ==: org.bukkit.inventory.ItemStack
-        type: POTION
+      - null
       - null
       - null
       - null
@@ -927,7 +927,7 @@ ranks:
       - null
       - null
   '95':
-    chat_prefix: Lvl 95
+    chat_prefix: '&c[Lvl 95] '
     equipment:
       boots:
         ==: org.bukkit.inventory.ItemStack
@@ -976,6 +976,7 @@ ranks:
           - §r70% Effective
       - ==: org.bukkit.inventory.ItemStack
         type: POTION
+        amount: 2
       - ==: org.bukkit.inventory.ItemStack
         type: PAPER
         amount: 3
@@ -1022,8 +1023,7 @@ ranks:
       - null
       - null
       - null
-      - ==: org.bukkit.inventory.ItemStack
-        type: POTION
+      - null
       - null
       - null
       - null
@@ -1032,7 +1032,7 @@ ranks:
       - null
       - null
   '100':
-    chat_prefix: Lvl 100
+    chat_prefix: '&4[Lvl 100] '
     equipment:
       inventory:
       - ==: org.bukkit.inventory.ItemStack
@@ -1045,8 +1045,7 @@ ranks:
           - §r90% Effective
       - ==: org.bukkit.inventory.ItemStack
         type: POTION
-      - ==: org.bukkit.inventory.ItemStack
-        type: POTION
+        amount: 2
       - ==: org.bukkit.inventory.ItemStack
         type: PAPER
         amount: 3
@@ -1062,6 +1061,7 @@ ranks:
       - ==: org.bukkit.inventory.ItemStack
         type: BREAD
         amount: 5
+      - null
       - null
       - null
       - null
